{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 56,
  "lineage": "908258fe-9b92-2282-0b22-6d5a123518e0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:929327065333:network-acl/acl-01b7bc85a61d92e70",
            "egress": [],
            "id": "acl-01b7bc85a61d92e70",
            "ingress": [],
            "owner_id": "929327065333",
            "subnet_ids": [],
            "tags": {
              "Name": "test2"
            },
            "tags_all": {
              "Name": "test2"
            },
            "vpc_id": "vpc-41d1d13b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "test2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:929327065333:network-acl/acl-069e079b416dd581e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "172.31.0.0/16",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "udp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-069e079b416dd581e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "172.31.0.0/16",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "udp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "929327065333",
            "subnet_ids": [],
            "tags": {
              "Name": "test"
            },
            "tags_all": {
              "Name": "test"
            },
            "vpc_id": "vpc-41d1d13b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}